# Arto

./: CONTRIBUTING.md  README.md  flake.nix  justfile
desktop/: Cargo.toml  Dioxus.toml  justfile
desktop/src/: cli.rs  components.rs  config.rs  ipc.rs  keybindings.rs  lib.rs  main.rs  markdown.rs  menu.rs  pinned_search.rs  shortcut.rs  state.rs  theme.rs  utils.rs  watcher.rs  window.rs
desktop/src/components/: app.rs  bookmark_button.rs  header.rs  icon.rs  image_window.rs  main_app.rs  math_window.rs  mermaid_window.rs  right_sidebar.rs  search_bar.rs  sidebar.rs
desktop/src/components/app/: drag_drop_overlay.rs  drag_handlers.rs  drop_handlers.rs  keybinding_engine.rs  listeners.rs  shortcut_overlay.rs
desktop/src/components/content/: context_menu.rs  context_menu_state.rs  file_viewer.rs
desktop/src/components/content/context_menu/: copy_as.rs  copy_code_as.rs  copy_path_as.rs  copy_table_as.rs  data.rs  image_ops.rs  menu_item.rs  source_ops.rs
desktop/src/components/content/preferences_view/: main_view.rs  tabs.rs
desktop/src/components/right_sidebar/: contents_tab.rs  tab_bar.rs
desktop/src/components/sidebar/: context_menu.rs  file_explorer.rs  quick_access.rs
desktop/src/components/tab/: context_menu.rs  tab_bar.rs
desktop/src/config/: app_config.rs  persistence.rs
desktop/src/config/app_config/: file_open_behavior.rs  keybindings_config.rs  markdown_config.rs
desktop/src/hooks/: viewer_window.rs
desktop/src/ipc/: client.rs  protocol.rs  queue.rs  server.rs  socket.rs  window_selection.rs
desktop/src/keybindings/: action.rs  context.rs  dispatcher.rs  engine.rs  hint.rs  presets.rs
desktop/src/keybindings/presets/: default.json  emacs.json  preset.schema.json  vim.json
desktop/src/markdown/: autolinks.rs  headings.rs  post_process.rs  source_lines.rs
desktop/src/state/: app_state.rs
desktop/src/state/app_state/: focused_panel.rs  sidebar_cursor.rs  tabs.rs
desktop/src/utils/: clipboard.rs  file.rs  file_operations.rs  image.rs  source_extract.rs
desktop/src/window/: child.rs  index.rs  main.rs  settings.rs
(+55 files in other folders)
