[package]
name = "arto"
version = "0.0.0"
authors = ["Alisue <lambdalisue@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
arboard = "3.4.1"
base64 = "0.22.1"
dark-light = "2.0.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
compile-time = "0.2"
dirs = "5.0.1"
interprocess = { version = "2.2", features = ["tokio"] }
dioxus = { version = "0.7.2", features = [] }
dioxus-desktop = "0.7.2"
dioxus-sdk-window = "0.7.0"
dotenvy = "0.15.7"
html-escape = "0.2.13"
image = "0.25.5"
indoc = "2.0.5"
lol_html = "2.7.0"
notify-debouncer-full = "0.4.0"
open = "5.3.2"
parking_lot = "0.12"
percent-encoding = "2.3"
pulldown-cmark = "0.13.0"
rfd = { version = "0.15.4", default-features = false, features = ["tokio", "xdg-portal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2.0.9"
tokio = { version = "1.47.1", features = ["time"] }
tracing = "0.1.41"
ureq = "3.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.0", features = ["v4"] }
display-info = "0.5.7"
mouse_position = "0.1.4"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
libc = "0.2.180"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
tracing-oslog = "0.3.0"

[dev-dependencies]
tempfile = "3.15.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[patch.crates-io]
# Fix overlapping cfg conditions that cause duplicate function definitions on Linux.
# https://github.com/DioxusLabs/sdk/pull/103
dioxus-sdk-window = { git = "https://github.com/iynaix/dioxus-sdk", rev = "28fc2264" }
